--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
+
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -22,5 +23,44 @@
             </ul>
         </address>
     </header>
+    <h1>Effective Solutions for Your Business</h1>
+<p><a href="http://google.com" alt= "Order button" role="button">Order service </a>
+</p>
+<h2>Feature</h2>
+<ul>
+    <h3><li>Strategy</li></h3>
+</ul>
+<p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+<ul>
+    <h3><li>Punctuality </li></h3>
+</ul>
+<p>Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
+<ul>
+<h3><li>Diligence </li></h3>
+</ul>
+<p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk. </p>
+<ul>
+    <h3><li>Technologies </li></h3>
+</ul>
+<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
+<h2>Our Team</h2>
+<p> <img src="images/mark.jpg" alt="Mark">
+    <h3>Mark Guerrero</h3>
+<p>Product Designer</p>
+</p>
+<p> <img src="images/tom.jpg" alt="Tom">
+    <h3>Tom Ford</h3>
+<p>Frontend Developer</p>
+</p>
+<p> <img src="images/camila.jpg" alt="Camila">
+    <h3>Camila Garcia</h3>
+<p>Marketing</p>
+</p>
+<p> <img src="images/daniel.jpg" alt="Daniel">
+    <h3>Daniel Wilson</h3>
+<p>Ui Designer</p>
+</p>
+<a href="index.html">WebStudio</a>
+<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </body>
 </html>
