--- a/index.html
+++ b/index.html
@@ -15,52 +15,74 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">info@devstudio.com</a></li>
+                <li><a href="tel:110001111111" target="_blank" rel="noopener noreferrer">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
+    <main>
+        <section>
     <h1>Effective Solutions for Your Business</h1>
-<p><a href="http://google.com" alt= "Order button" role="button">Order service </a>
-</p>
+</section>
+<button type="button">Order Service</button>
 <h2>Feature</h2>
+<section>
 <ul>
-    <h3><li>Strategy</li></h3>
+    <li>
+        <h3>Strategy</h3>
+    <p>
+        Our goal is to identify the business problem to walk away with the perfect and creative solution.
+    </p>
+    </li>
+    <li>
+        <h3>Punctuality</h3>
+        <p>
+            Bring the key message to the brand's audience for the best price within the shortest possible time.
+        </p>
+    </li>
+<li>
+    <h3>Diligence</h3>
+    <p>
+        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+    </p>
+</li>
+    <li>
+        <h3>Technologies</h3>
+    <p>
+        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+    </p>
+</li>
 </ul>
-<p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+</section>
+<h3>Our Team</h3>
 <ul>
-    <h3><li>Punctuality </li></h3>
-</ul>
-<p>Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
-<ul>
-<h3><li>Diligence </li></h3>
-</ul>
-<p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk. </p>
-<ul>
-    <h3><li>Technologies </li></h3>
-</ul>
-<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
-<h2>Our Team</h2>
-<p> <img src="images/mark.jpg" alt="Mark">
+    <li>
+    <img src="images/mark.jpg" alt="Mark" width="264">
+    </li>
     <h3>Mark Guerrero</h3>
 <p>Product Designer</p>
-</p>
-<p> <img src="images/tom.jpg" alt="Tom">
+<li>
+    <img src="images/tom.jpg" alt="Tom" width="264">
     <h3>Tom Ford</h3>
 <p>Frontend Developer</p>
-</p>
-<p> <img src="images/camila.jpg" alt="Camila">
+<li>
+    <img src="images/camila.jpg" alt="Camila" width="264">
+</li>
     <h3>Camila Garcia</h3>
 <p>Marketing</p>
-</p>
-<p> <img src="images/daniel.jpg" alt="Daniel">
+<li>
+    <img src="images/daniel.jpg" alt="Daniel" width="264">
+</li>
     <h3>Daniel Wilson</h3>
 <p>Ui Designer</p>
-</p>
+</ul>
+<footer>
 <a href="index.html">WebStudio</a>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<p>
+    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+</p>
+</footer>
 </body>
 </html>
