--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="our-team">
         <h2 class="act">Our Team</h2>
         <ul>
           <li class="team-work">
@@ -140,10 +140,11 @@
 </ul>
       </section>
     </main>
-    <footer class="web">
-      <a class="navigation-logo" href="./index.html">Web<span class="web-studio">Studio </span>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-studio-footer">Studio</span>
       </a>
-      <p class="web-text">
+      <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
