--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <nav class="navigation">
         <a class="navigation-logo" href="./index.html">Web<span class="studio"> Studio</span></a>
         <ul>
-          <li><a class="navigation-list" href="/">Studio</a></li>
-          <li><a class="navigation-list" href="/">Portfolio</a></li>
-          <li><a class="navigation-list" href="/">Contacts</a></li>
+          <li><a href="./index.html" class="nav">Studio</a></li>
+          <li><a href="" class="nav">Portfolio</a></li>
+          <li><a href="" class="nav">Contacts</a></li>
         </ul>
       </nav>
       <address class="info">
@@ -29,7 +29,7 @@
     </header>
     <main>
       <section class="effect-business">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="title-text">Effective Solutions for Your Business</h1>
         <button type="button" class="btn">Order Service</button>
       </section>
       <section>
@@ -113,32 +113,32 @@
       <section>
         <h2 class="act">Our Portfolio </h2>
     <ul class="portfolio">
-        <li class="portfolio-list"><img class="portfolio-photo" src="./images/app.jpg" alt="banking app" width="264">
+        <li class="portfolio-list"><img class="portfolio-photo" src="./images/app.jpg" alt="banking app" width="360">
             <h3 class="portfolio-name">Banking App</h3>
             <p class="portfolio-work">App</p>
         </li>
-        <li class="portfolio-list"><img class="portfolio-photo" src="./images/pay.jpg" alt="pay cash" width="264" >
+        <li class="portfolio-list"><img class="portfolio-photo" src="./images/pay.jpg" alt="pay cash" width="360" >
           <h3 class="portfolio-name">Cashless Payment</h3>
           <p class="portfolio-work">Marketing</p>
       </li>
-      <li class="portfolio-list"><img class="portfolio-photo" src="./images/meditation.jpg" alt="meditation" width="264">
+      <li class="portfolio-list"><img class="portfolio-photo" src="./images/meditation.jpg" alt="meditation" width="360">
         <h3 class="portfolio-name">Meditation App</h3>
         <p class="portfolio-work">App</p>
     </li>
-    <li class="portfolio-list"><img class="portfolio-photo" src="./images/taxi.jpg" alt="taxi service" width="264">
+    <li class="portfolio-list"><img class="portfolio-photo" src="./images/taxi.jpg" alt="taxi service" width="360">
       <h3 class="portfolio-name">Taxi Service</h3>
       <p class="portfolio-work">Marketing</p>
   </li>
-  <li class="portfolio-list"><img class="portfolio-photo" src="./images/design.jpg" alt="Illustrations" width="264">
+  <li class="portfolio-list"><img class="portfolio-photo" src="./images/design.jpg" alt="Illustrations" width="360">
     <h3 class="portfolio-name">Screen Illustrations</h3>
     <p class="portfolio-work">Design</p>
 </li>
-<li class="portfolio-list"><img class="portfolio-photo" src="./images/course.jpg" alt="Online Courses" width="264">
+<li class="portfolio-list"><img class="portfolio-photo" src="./images/course.jpg" alt="Online Courses" width="360">
   <h3 class="portfolio-name">Online Courses</h3>
   <p class="portfolio-work">Marketing</p>
 </li>
 </ul>
-      </section>
+    </section>
     </main>
     <footer class="footer">
       <a class="logo-footer" href="./index.html"
