--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2 class="act">Our Team</h2>
         <ul>
           <li class="team-work">
-            <img class="lead-photo"
+            <img 
               width="264"
               height="260"
               src="./images/img-1mark.jpg"
@@ -79,7 +79,7 @@
             <p class="lead-job">Product Designer</p>
           </li>
           <li  class="team-work">
-            <img class="lead-photo"
+            <img 
               width="264"
               height="260"
               src="./images/img-2tom.jpg"
@@ -89,7 +89,7 @@
             <p class="lead-job">Frontend Developer</p>
           </li>
           <li class="team-work">
-            <img class="lead-photo"
+            <img 
               width="264"
               height="260"
               src="./images/img-3camila.jpg"
@@ -99,7 +99,7 @@
             <p class="lead-job">Marketing</p>
           </li>
           <li class="team-work">
-            <img class="lead-photo"
+            <img 
               width="264"
               height="260"
               src="./images/img-4daniel.jpg"
@@ -113,27 +113,27 @@
       <section>
         <h2 class="act">Our Portfolio </h2>
     <ul class="portfolio">
-        <li class="portfolio-list"><img class="portfolio-photo" src="./images/app.jpg" alt="banking app" width="360">
+        <li class="portfolio-list"><img src="./images/app.jpg" alt="banking app" width="360">
             <h3 class="portfolio-name">Banking App</h3>
             <p class="portfolio-work">App</p>
         </li>
-        <li class="portfolio-list"><img class="portfolio-photo" src="./images/pay.jpg" alt="pay cash" width="360" >
+        <li class="portfolio-list"><img src="./images/pay.jpg" alt="pay cash" width="360" >
           <h3 class="portfolio-name">Cashless Payment</h3>
           <p class="portfolio-work">Marketing</p>
       </li>
-      <li class="portfolio-list"><img class="portfolio-photo" src="./images/meditation.jpg" alt="meditation" width="360">
+      <li class="portfolio-list"><img src="./images/meditation.jpg" alt="meditation" width="360">
         <h3 class="portfolio-name">Meditation App</h3>
         <p class="portfolio-work">App</p>
     </li>
-    <li class="portfolio-list"><img class="portfolio-photo" src="./images/taxi.jpg" alt="taxi service" width="360">
+    <li class="portfolio-list"><img src="./images/taxi.jpg" alt="taxi service" width="360">
       <h3 class="portfolio-name">Taxi Service</h3>
       <p class="portfolio-work">Marketing</p>
   </li>
-  <li class="portfolio-list"><img class="portfolio-photo" src="./images/design.jpg" alt="Illustrations" width="360">
+  <li class="portfolio-list"><img src="./images/design.jpg" alt="Illustrations" width="360">
     <h3 class="portfolio-name">Screen Illustrations</h3>
     <p class="portfolio-work">Design</p>
 </li>
-<li class="portfolio-list"><img class="portfolio-photo" src="./images/course.jpg" alt="Online Courses" width="360">
+<li class="portfolio-list"><img src="./images/course.jpg" alt="Online Courses" width="360">
   <h3 class="portfolio-name">Online Courses</h3>
   <p class="portfolio-work">Marketing</p>
 </li>
